# alacritree

./: .release-please-manifest.json  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml  release-please-config.json
.github/: upstream-sync.toml
.github/workflows/: aur-bin-publish.yml  ci.yml  homebrew-update.yml  publish-downstream.yml  release-macos-app.yml  release-please.yml  release.yml  scoop-update.yml  upstream-sync.yml
Formula/: alacritree.rb
alacritree/: CHANGELOG.md  Cargo.toml  build.rs
alacritree/extra/osx/: make-app.sh
alacritree/extra/osx/Alacritree.app/Contents/: Info.plist
alacritree/src/: app.rs  bindings.rs  builtin_font.rs  clipboard.rs  color_glyph.rs  colors.rs  command_ext.rs  command_palette.rs  config.rs  doppler.rs  fonts.rs  git_nav.rs  git_status.rs  ime.rs  input.rs  ipc.rs  links.rs  main.rs  mcp.rs  mouse.rs  notify_macos.rs  panel_filter.rs  paste.rs  path_style.rs  pr_status.rs  projects.rs  row_label.rs  scratchpad.rs  session.rs  shortcuts_window.rs  sidebar_nav.rs  stale_exe.rs  state.rs  terminal_view.rs  test_util.rs  worktree.rs  wsl.rs  wsl_helper.rs
alacritree/src/cli/: doctor.rs  install.rs  mod.rs  offline.rs  render.rs
alacritty/: Cargo.toml
bucket/: alacritree.json
docs/: alacritree.md  keyboard-shortcuts.md
egui-winit/src/: lib.rs
packaging/aur/alacritree-bin/: PKGBUILD
packaging/aur/alacritree-git/: PKGBUILD
packaging/homebrew/: README.md
