[package]
name = "alacritree"
version = "0.1.2"
authors = ["Arnaud Gissinger"]
license = "Apache-2.0"
description = "Alacritty fork with worktree-aware sidebars"
edition.workspace = true
rust-version.workspace = true

[dependencies]
alacritty_terminal = { path = "../alacritty_terminal" }
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.31"
log = "0.4"
env_logger = "0.11"
git2 = { version = "0.20", default-features = false }
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { workspace = true }
xdg = "3.0.0"
home = "0.5.5"
unicode-width = "0.2.0"
fontdb = { version = "0.23", default-features = false, features = ["fontconfig", "memmap"] }
# Reads cmap tables to build coverage sets for the Windows fallback chain.
# Same major as the ttf-parser fontdb already pulls in, so no duplicate build.
ttf-parser = "0.25"
# Font faces reach egui as mappings, not buffers.  Same version fontdb already
# links, so no duplicate build.
memmap2 = "0.9"
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
# Rasterizes COLR/CBDT/sbix/SVG emoji, which egui's outline-only glyph pipeline
# cannot draw.  ttf-parser could cover COLRv0 with no new dependency, but the
# COLRv1 gradient painting that Noto Color Emoji needs is not worth hand-rolling.
swash = "0.2"
png = "0.17"
# Desktop notifications when a background session rings the bell.
notify-rust = "4"
interprocess = { version = "2.4.2", default-features = false }

[dev-dependencies]
# Throwaway repos for worktree discovery/prune tests.
tempfile = "3"

[target.'cfg(unix)'.dependencies]
# Used for font matching: matches what alacritty does via crossfont so that
# fontconfig <alias> rules and weight/slant substitution behave identically
# in both terminals.  Pinned to 0.8 because that's the latest line that links
# against `yeslogic-fontconfig-sys = "^5"`, which is also what `crossfont`
# (alacritty's font backend, present in this workspace) pulls in.
fontconfig = "0.8"

[target.'cfg(windows)'.dependencies]
# Restricts the DLL search path at startup; see `harden_dll_search_path`.
windows-sys = { version = "0.59", features = ["Win32_System_LibraryLoader"] }
# Foreground-agent detection: walks the shell's descendant process tree.
# Linux reads /proc directly, so the dependency is Windows-only.
sysinfo = { version = "0.36", default-features = false, features = ["system"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.2"

[[bin]]
name = "alacritree"
path = "src/main.rs"
